chore: gitignore에 디렉토리 추가 등