@@ -81,3 +81,7 @@ tasks.named('asciidoctor') {
 	inputs.dir snippetsDir
 	dependsOn test
 }
+
+test {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
